Add image/document processing backend and MCP server with GitHub Actions secrets integration
- Created image-backend with FastAPI REST API for OCR using Google Cloud Vision
  - Supports images (JPEG, PNG, GIF, BMP, WebP, TIFF) and multi-page PDFs
  - Three endpoints: file upload, URL processing, and base64 processing
  - Returns text with confidence scores and page information

- Created image-mcp-server with 4 MCP tools for Claude agents
  - extract_text_from_image - OCR for base64-encoded images
  - extract_text_from_url - Process images/PDFs from URLs
  - extract_text_from_pdf - Multi-page PDF document processing
  - check_image_api_health - Service health monitoring

- Configured GitHub Actions secrets for secure credential management
  - Updated deploy-self-hosted.yml to use GOOGLE_CLOUD_CREDENTIALS secret
  - Credentials mounted at runtime, never committed to repository
  - Updated build-base-images.yml to build image service containers

- Added docker-compose.image.yml for deployment
  - image-backend on port 14400
  - image-mcp-server with stdio and HTTP (port 14402) transports
  - Resource limits and health checks configured

- Security improvements
  - Added google-credentials.json to .gitignore
  - Dockerfile does not copy credentials during build
  - Credentials mounted read-only at runtime from GitHub secret

- Comprehensive documentation
  - DEPLOYMENT.md with GitHub secret setup and troubleshooting
  - README.md with quick setup guide and API documentation
  - Follows same architecture pattern as voice services

--- a/.github/workflows/build-base-images.yml
+++ b/.github/workflows/build-base-images.yml
@@ -21,6 +21,10 @@ on:
       - 'voice-backend/requirements.txt'
       - 'voice-mcp-server/Dockerfile*'
       - 'voice-mcp-server/requirements.txt'
+      - 'image-backend/Dockerfile*'
+      - 'image-backend/requirements.txt'
+      - 'image-mcp-server/Dockerfile*'
+      - 'image-mcp-server/requirements.txt'
       - '.github/workflows/build-base-images.yml'
     branches:
       - main
@@ -60,6 +64,12 @@ jobs:
           - name: "voice-mcp-server"
             dockerfile: "voice-mcp-server/Dockerfile"
             context: "voice-mcp-server"
+          - name: "image-backend"
+            dockerfile: "image-backend/Dockerfile"
+            context: "image-backend"
+          - name: "image-mcp-server"
+            dockerfile: "image-mcp-server/Dockerfile"
+            context: "image-mcp-server"
 
     steps:
     - name: Checkout repository
@@ -179,7 +189,7 @@ jobs:
         echo "🧹 Cleaning up old base images..."
         
         # Keep last 5 versions of each base image
-        for service in backend-base terminal-base frontend-base voice-backend voice-mcp-server; do
+        for service in backend-base terminal-base frontend-base voice-backend voice-mcp-server image-backend image-mcp-server; do
           echo "Cleaning $service images..."
           docker images --format "table {{.Repository}}:{{.Tag}}\t{{.CreatedAt}}" \
             | grep "claude-workflow-$service" \
