--- a/.github/workflows/deploy-pop-os-0.yml
+++ b/.github/workflows/deploy-pop-os-0.yml
@@ -1,8 +1,7 @@
 name: Deploy to pop-os-0
 
 on:
-  push:
-    branches: [ main, develop ]
+  # Manual trigger only - no automatic deployment on push
   workflow_dispatch:
     inputs:
       environment:
