Fix: Use GitHub Actions expression for secret existence check
Previous fix using [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]
still failed because the JSON secret contains newlines, causing:
  syntax error in conditional expression

The secret value was being expanded inline in the bash conditional,
and multiline JSON broke the syntax.

Solution: Use GitHub Actions expression evaluation instead:
  if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then

This evaluates the expression at GitHub Actions level (returns 'true'
or 'false'), then tests that string in bash. The secret value is never
expanded in the conditional - only when writing to file.

Changes:
- deploy-self-hosted.yml: 7 instances fixed
- deploy-pop-os-0.yml: 7 instances fixed

This should finally enable image processing services to deploy.

--- a/.github/workflows/deploy-pop-os-0.yml
+++ b/.github/workflows/deploy-pop-os-0.yml
@@ -163,7 +163,7 @@ jobs:
         fi
 
         # Copy image processing services if Google credentials are available
-        if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+        if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
           echo "🖼️  Copying image processing services..."
           cp -r $GITHUB_WORKSPACE/image-backend .
           cp -r $GITHUB_WORKSPACE/image-mcp-server .
@@ -248,7 +248,7 @@ jobs:
         fi
 
         # Create Google Cloud credentials file if secret is available
-        if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+        if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
           echo "🖼️  Creating Google Cloud credentials file..."
           echo '${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}' > google-credentials.json
           echo "✅ Google Cloud credentials file created"
@@ -295,7 +295,7 @@ jobs:
         fi
 
         # Add image services if available
-        if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+        if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
           SERVICES="$SERVICES image-backend image-mcp-server"
         fi
 
@@ -337,7 +337,7 @@ jobs:
             docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-voice-mcp-server:$BASE_IMAGE_TAG" || true
           fi
 
-          if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+          if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
             docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-image-backend:$BASE_IMAGE_TAG" || true
             docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-image-mcp-server:$BASE_IMAGE_TAG" || true
           fi
@@ -358,7 +358,7 @@ jobs:
           fi
 
           # Add image processing services if Google credentials are available
-          if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+          if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
             echo "🖼️  Including image processing services in deployment..."
             COMPOSE_FILES="$COMPOSE_FILES -f docker-compose.image.yml"
           fi
@@ -392,7 +392,7 @@ jobs:
           fi
 
           # Add image processing services if Google credentials are available
-          if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+          if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
             echo "🖼️  Including image processing services in deployment..."
             COMPOSE_FILES="$COMPOSE_FILES -f docker-compose.image.yml"
           fi
@@ -460,7 +460,7 @@ jobs:
         fi
 
         # Show image processing services if enabled
-        if [[ -n "${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]]; then
+        if [[ "${{ secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}" == "true" ]]; then
           echo ""
           echo "🖼️  Image Processing Services:"
           echo "Image Backend API: http://${HOST_IP_FROM_ENV}:14400"
